# vesta-x-liquid-staking-sc

./: .gitignore  Cargo.toml  README.md  deploy-devnet.interaction.json  deploy-testnet.interaction.json  erdpy.data-storage.json
interaction/: devnet.snippets.sh  testnet.snippets.sh
mandos/: adder.scen.json
meta/: Cargo.toml
sc/: .gitignore  Cargo.toml  README.md  erdpy.data-storage.json
sc/interaction/: 0-devnet.snippets.sh  0-mainnet.snippets.sh  1-mainnet.snippets.sh  devnet.snippets.sh  testnet.snippets.sh
sc/meta/: Cargo.toml
sc/meta/src/: main.rs
sc/output-docker/: artifacts.json
sc/output-docker/vesta-x-liquid-staking/: vesta-x-liquid-staking-0.1.0.source.json  vesta-x-liquid-staking-0.2.0.source.json  vesta-x-liquid-staking.abi.json  vesta-x-liquid-staking.codehash.txt  vesta-x-liquid-staking.imports.json  vesta-x-liquid-staking.wasm
sc/src/: amm.rs  brand.rs  config.rs  constant.rs  context.rs  delegate_proxy.rs  error.rs  event.rs  lib.rs  validation.rs  view.rs
sc/src/liquid_staking/: admin.rs  management.rs  mod.rs  user.rs
sc/src/storages/: common_storage.rs  pool_storage.rs
sc/tests/: contract_interactions.rs  contract_setup.rs  test.rs
sc/wasm/: Cargo.toml
sc/wasm/src/: lib.rs
script/: .gitignore  package-lock.json  package.json
src/: admin.rs  amm.rs  brand.rs  config.rs  context.rs  delegate.rs  delegate_proxy.rs  event.rs  lib.rs  pool.rs  stake.rs  state.rs  storage.rs  valar.rs  validation.rs  view.rs
tests/: adder_mandos_constructed_raw_test.rs  adder_mandos_constructed_with_calls_test.rs  adder_mandos_rs_test.rs  (+2 more)
(+60 files in other folders)
