[package]
name = "vesta-x-liquid-staking"
version = "0.2.0"
authors = [ "Ice <icegriffin1122@gmail.com>",]
edition = "2018"
publish = false
license = "GPL3 or later"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"
